<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">StoresList</string>
    <string name="stores">Stores</string>
    <string name="map">Map</string>
    <string name="cancel">Cancel</string>
    <string name="product_title">Product Title:</string>
    <string name="product_id">Product ID:</string>
    <string name="product_desc">Product Description:</string>
    <string name="product_title_dialog">Product Title:</string>
    <string name="product_description_dialog">Product Description:</string>
    <string name="product_overview">Product overview:</string>
    <string name="load">Loading</string>
    <string name="shopTitle">Shop Title:</string>
    <string name="shopDescription">Shop Description:</string>
    <string name="createShop">Create Shop</string>
    <string name="pickMap">Pick Point the Map</string>
    <string name="registerEmail">E-mail</string>
    <string name="registerPassword">Password (min. 8 items)</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="userName">User Name</string>
    <string name="register">Register</string>
    <string name="entering">OK</string>
    <string name="registerForm">REGISTRATION FORM</string>
    <string name="signInBtn">SIGN UP</string>
    <string name="loginBtn">LOGIN</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="descriptionToMap">Before get coordinates of your new Product on the Map push button below and set new position of your new Product. Then, returned and will show in fields your "latitude" and "longitude"</string>
    <string name="representTextToSignin">Before to create new Product, you are must to SIGN UP.</string>
    <string name="representTextToLogin">If you are already done registration, you are must only LOGIN to your account to create new Product</string>
    <string name="getCoordinates">Get Coordinates</string>
</resources>
