<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="12"
            android:id="@+id/email_edit"
            android:layout_marginBottom="10dp"
            android:hint="@string/registerEmail"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="12"
            android:id="@+id/password_edit"
            android:layout_marginBottom="10dp"
            android:hint="@string/registerPassword"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="12"
            android:id="@+id/password_confirm"
            android:layout_marginBottom="10dp"
            android:hint="@string/confirmPassword"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="12"
            android:id="@+id/user_name"
            android:layout_marginBottom="10dp"
            android:hint="@string/userName"/>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

    <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/registerBtn"/>
    <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancelBtn"/>
        </LinearLayout>
</LinearLayout>