<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/productId"
            android:text="@string/product_id"
            android:textColor="#ffffff"
            android:padding="10dp"/>
    <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/productDesc"
            android:text="@string/product_desc"
            android:textColor="#ffffff"
            android:padding="10dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancel"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:layout_margin="20dp"/>
</LinearLayout>