<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="150dp">
        <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editText"
                android:hint="@string/registerEmail"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"/>
        <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText2"
                android:hint="@string/registerPassword"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

        <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/signInBtn"
                android:id="@+id/signInBtn"
                android:padding="15dp"
                android:textSize="10sp"/>
        <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/loginBtn"
                android:id="@+id/loginBtn"
                android:padding="15dp"
                android:textSize="10sp"/>
    </LinearLayout>
</LinearLayout>